🚀 Release: Enhanced Message Filtering with Gmail & Calendar Integration
## 🎯 Major Features Added

### 📧 Gmail Integration
- **Full Gmail API Integration**: OAuth2 authentication with secure token management
- **Enhanced Message Filtering**: Company-based email filtering with flexible domain matching
- **Tool-Originated Message Tracking**: Visual badges for AI-generated vs manual messages
- **Real-time Email Sync**: Automatic email fetching from target companies
- **Send Email Capability**: Send emails directly through ConnectorPro interface

### 📅 Google Calendar Integration
- **Calendar API Integration**: OAuth2 authentication for Google Calendar
- **Meeting Management**: Create, view, and manage calendar events
- **Automatic Meeting Links**: Generate video meeting links for scheduled events
- **Calendar Callback Handling**: Secure OAuth callback processing

### 🎨 Enhanced Frontend UI
- **Tool-Originated Badges**: Smart badges (AI Generated, Automated, Tool Initiated)
- **Company-Matched Email Display**: Visual grouping by target companies
- **Enhanced Search**: Multi-field search across email metadata and content
- **Responsive Message Cards**: Improved email and message visualization
- **Target Company Management**: Easy add/remove target companies interface

### 🔧 Backend Enhancements
- **Enhanced API Response Format**: Structured response with metrics and categorization
- **Flexible Domain Matching**: Support for multiple domains per company
- **Tool Metadata Tracking**: Session tracking and original request logging
- **Database Schema Updates**: New tables for Gmail/Calendar integration
- **Secure Credential Management**: Encrypted token storage and refresh handling

## 📊 Technical Improvements

### Frontend Updates
- Updated TypeScript types for enhanced API responses
- New ToolOriginatedBadgeComponent with contextual styling
- Enhanced GmailIntegration component with new API structure
- Updated Messages page with tool-originated email sections
- Improved se

--- a/python-backend/.env.example
+++ b/python-backend/.env.example
@@ -11,3 +11,11 @@ JWT_EXPIRES_IN=3600
 
 # CORS
 CORS_ORIGINS=http://localhost:5173
+
+# Gmail Integration (Google OAuth2)
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/gmail/callback
+
+# Encryption
+ENCRYPTION_KEY=your-encryption-key-for-token-storage
