--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -6,7 +6,12 @@ pydantic==2.5.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-pandas==2.1.4
+pandas>=2.2.0
 openpyxl==3.1.2
 xlrd==2.0.1
 PyJWT==2.8.0
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
+cryptography==41.0.7
