--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,6 +1,6 @@
-# FastAPI and server
+# FastAPI and server (pre-compiled wheels only)
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 
 # Database
 motor==3.3.2
@@ -8,34 +8,42 @@ motor==3.3.2
 # Configuration
 python-dotenv==1.0.0
 
-# Data validation (compatible versions for Python 3.13)
-pydantic==2.4.2
-pydantic-core==2.10.1
+# Data validation (use older stable versions with pre-compiled wheels)
+pydantic==1.10.12
 
-# Authentication and security
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# Authentication and security (avoid cryptography compilation)
 PyJWT==2.8.0
-cryptography==41.0.7
+python-jose==3.3.0
 
 # File handling
 python-multipart==0.0.6
 
-# Data processing (compatible versions)
-pandas==2.1.4
+# Data processing (minimal versions to avoid compilation)
+pandas==1.5.3
 openpyxl==3.1.2
 xlrd==2.0.1
 
-# Google APIs
+# Google APIs (core only, avoid heavy dependencies)
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 
-# HTTP client (compatible version)
+# HTTP client (stable version)
 aiohttp==3.8.6
 
-# Additional dependencies for stability
+# Core dependencies (ensure compatibility)
 typing-extensions==4.8.0
 anyio==3.7.1
 starlette==0.27.0
+click==8.1.7
+h11==0.14.0
+httptools==0.6.1
+python-dateutil==2.8.2
+pytz==2023.3
+six==1.16.0
+urllib3==2.0.7
+certifi==2023.7.22
+charset-normalizer==3.3.2
+idna==3.4
+requests==2.31.0
