--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,51 +1,51 @@
-# Python 3.13 compatible FastAPI setup - NO COMPILATION REQUIRED
-# Updated versions to fix ForwardRef._evaluate() compatibility issues
+# ZERO-COMPILATION FastAPI setup for Render deployment
+# Absolutely NO Rust/C compilation dependencies
 
-# Core FastAPI (Python 3.13 compatible)
-fastapi==0.108.0
+# Core FastAPI (older version, pure Python, no Rust)
+fastapi==0.95.2
 
 # ASGI server (pure Python implementation)
-uvicorn==0.25.0
+uvicorn[standard]==0.22.0
 
 # Database (pure Python)
-motor==3.3.2
-pymongo==4.6.0
+motor==3.1.1
+pymongo==4.3.3
 
 # Configuration
 python-dotenv==1.0.0
 
-# Data validation (Python 3.13 compatible)
-pydantic==2.5.0
+# Data validation (Pydantic v1 - pure Python, no Rust)
+pydantic==1.10.7
 
 # Authentication (minimal, no cryptography)
-PyJWT==2.8.0
+PyJWT==2.6.0
 
 # File handling (pure Python)
 python-multipart==0.0.6
 
 # Minimal data processing (avoid pandas compilation)
-# pandas removed - will handle CSV with built-in csv module
 openpyxl==3.1.2
 xlrd==2.0.1
 
 # Google APIs (minimal set)
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-google-api-python-client==2.108.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.86.0
 
 # Core dependencies (pure Python only)
-typing-extensions==4.8.0
-click==8.1.7
+typing-extensions==4.5.0
+starlette==0.27.0
+click==8.1.3
 python-dateutil==2.8.2
 six==1.16.0
-urllib3==2.0.7
-certifi==2023.7.22
-requests==2.31.0
+urllib3==1.26.15
+certifi==2022.12.7
+requests==2.28.2
 
-# Remove these to avoid compilation:
-# - aiohttp (C compilation issues)
-# - httptools (C compilation issues)
-# - pandas (C compilation issues)
-# - anyio (may have C dependencies)
-# - h11 (may have C dependencies)
+# ABSOLUTELY NO:
+# - pydantic v2 (has Rust dependencies)
+# - newer uvicorn (may have C dependencies)
+# - aiohttp (C compilation)
+# - httptools (C compilation)
+# - pandas (C compilation)
