--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,47 +1,48 @@
-# ZERO-COMPILATION FastAPI setup for Render deployment
-# Absolutely NO Rust/C compilation dependencies
+# ULTRA-STABLE FastAPI setup for Render deployment
+# Python 3.11 compatible versions - NO compilation dependencies
 
-# Core FastAPI (older version, pure Python, no Rust)
-fastapi==0.95.2
+# Core FastAPI (proven stable version)
+fastapi==0.88.0
 
-# ASGI server (pure Python implementation)
-uvicorn[standard]==0.22.0
+# ASGI server (pure Python, no C extensions)
+uvicorn==0.20.0
 
 # Database (pure Python)
-motor==3.1.1
-pymongo==4.3.3
+motor==3.0.0
+pymongo==4.2.0
 
 # Configuration
-python-dotenv==1.0.0
+python-dotenv==0.21.0
 
-# Data validation (Pydantic v1 - pure Python, no Rust)
-pydantic==1.10.7
+# Data validation (Pydantic v1 - stable with Python 3.11)
+pydantic==1.10.2
 
 # Authentication (minimal, no cryptography)
-PyJWT==2.6.0
+PyJWT==2.4.0
 
 # File handling (pure Python)
-python-multipart==0.0.6
+python-multipart==0.0.5
 
 # Minimal data processing (avoid pandas compilation)
-openpyxl==3.1.2
+openpyxl==3.0.10
 xlrd==2.0.1
 
 # Google APIs (minimal set)
-google-auth==2.17.3
-google-auth-oauthlib==1.0.0
+google-auth==2.15.0
+google-auth-oauthlib==0.7.1
 google-auth-httplib2==0.1.0
-google-api-python-client==2.86.0
+google-api-python-client==2.70.0
 
-# Core dependencies (pure Python only)
-typing-extensions==4.5.0
-starlette==0.27.0
+# Core dependencies (stable versions for Python 3.11)
+typing-extensions==4.4.0
+starlette==0.22.0
 click==8.1.3
 python-dateutil==2.8.2
 six==1.16.0
-urllib3==1.26.15
-certifi==2022.12.7
-requests==2.28.2
+urllib3==1.26.12
+certifi==2022.9.24
+requests==2.28.1
+
 
 # ABSOLUTELY NO:
 # - pydantic v2 (has Rust dependencies)
