--- a/python-backend/render.yaml
+++ b/python-backend/render.yaml
@@ -3,6 +3,7 @@ services:
     name: connectorpro-backend
     env: python
     plan: starter
+    runtime: python-3.11.10
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     envVars:
