🔧 Fix Python 3.13 compatibility: Update typing-extensions to 4.8.0
- Render is forcing Python 3.13 despite runtime configuration
- TypeError: type 'typing.TypeVar' is not an acceptable base type
- Updated typing-extensions from 4.4.0 to 4.8.0 for Python 3.13 compatibility
- This should resolve the typing system incompatibility issues

--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -33,8 +33,8 @@ google-auth-oauthlib==0.7.1
 google-auth-httplib2==0.1.0
 google-api-python-client==2.70.0
 
-# Core dependencies (stable versions for Python 3.11)
-typing-extensions==4.4.0
+# Core dependencies (Python 3.13 compatible)
+typing-extensions==4.8.0
 starlette==0.22.0
 click==8.1.3
 python-dateutil==2.8.2
