--- a/python-backend/render.yaml
+++ b/python-backend/render.yaml
@@ -7,6 +7,8 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.10
       - key: APP_ENV
         value: production
       - key: PORT
