--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,48 +1,47 @@
-# ULTRA-STABLE FastAPI setup for Render deployment
-# Python 3.11 compatible versions - NO compilation dependencies
+# Python 3.13 Compatible FastAPI setup for Render deployment
+# Updated to work with Render's Python 3.13 environment
 
-# Core FastAPI (proven stable version)
-fastapi==0.88.0
+# Core FastAPI (Python 3.13 compatible)
+fastapi==0.104.1
 
-# ASGI server (pure Python, no C extensions)
-uvicorn==0.20.0
+# ASGI server (Python 3.13 compatible)
+uvicorn==0.24.0
 
 # Database (pure Python)
-motor==3.0.0
-pymongo==4.2.0
+motor==3.3.2
+pymongo==4.6.0
 
 # Configuration
-python-dotenv==0.21.0
+python-dotenv==1.0.0
 
-# Data validation (Pydantic v1 - stable with Python 3.11)
-pydantic==1.10.2
+# Data validation (Pydantic v1 - latest compatible with Python 3.13)
+pydantic==1.10.13
 
 # Authentication (minimal, no cryptography)
-PyJWT==2.4.0
+PyJWT==2.8.0
 
 # File handling (pure Python)
-python-multipart==0.0.5
+python-multipart==0.0.6
 
 # Minimal data processing (avoid pandas compilation)
-openpyxl==3.0.10
+openpyxl==3.1.2
 xlrd==2.0.1
 
-# Google APIs (minimal set)
-google-auth==2.15.0
-google-auth-oauthlib==0.7.1
-google-auth-httplib2==0.1.0
-google-api-python-client==2.70.0
+# Google APIs (updated set)
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
 
 # Core dependencies (Python 3.13 compatible)
 typing-extensions==4.8.0
-starlette==0.22.0
-click==8.1.3
+starlette==0.27.0
+click==8.1.7
 python-dateutil==2.8.2
 six==1.16.0
-urllib3==1.26.12
-certifi==2022.9.24
-requests==2.28.1
-
+urllib3==2.0.7
+certifi==2023.11.17
+requests==2.31.0
 
 # ABSOLUTELY NO:
 # - pydantic v2 (has Rust dependencies)
