--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,51 +1,55 @@
-# Python 3.13 Compatible FastAPI setup for Render deployment
-# Updated to work with Render's Python 3.13 environment
-
-# Core FastAPI (Python 3.13 compatible)
-fastapi==0.104.1
-
-# ASGI server (Python 3.13 compatible)
-uvicorn==0.24.0
-
-# Database (pure Python)
-motor==3.3.2
-pymongo==4.6.0
-
-# Configuration
-python-dotenv==1.0.0
-
-# Data validation (Pydantic v1 - latest compatible with Python 3.13)
-pydantic==1.10.13
-
-# Authentication (minimal, no cryptography)
-PyJWT==2.8.0
-
-# File handling (pure Python)
-python-multipart==0.0.6
-
-# Minimal data processing (avoid pandas compilation)
-openpyxl==3.1.2
-xlrd==2.0.1
-
-# Google APIs (updated set)
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-google-api-python-client==2.108.0
-
-# Core dependencies (Python 3.13 compatible)
-typing-extensions==4.8.0
-starlette==0.27.0
-click==8.1.7
-python-dateutil==2.8.2
-six==1.16.0
-urllib3==2.0.7
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==3.7.1
+attrs==25.3.0
+cachetools==5.5.2
 certifi==2023.11.17
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.1.7
+cryptography==46.0.1
+dnspython==2.8.0
+et_xmlfile==2.0.0
+fastapi==0.115.6
+frozenlist==1.7.0
+google-api-core==2.25.1
+google-api-python-client==2.108.0
+google-auth==2.23.4
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
+googleapis-common-protos==1.70.0
+h11==0.16.0
+httplib2==0.31.0
+idna==3.10
+motor==3.3.2
+multidict==6.6.4
+oauthlib==3.3.1
+openpyxl==3.1.2
+propcache==0.3.2
+proto-plus==1.26.1
+protobuf==6.32.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
+pydantic==2.10.3
+pydantic_core==2.27.1
+PyJWT==2.8.0
+pymongo==4.6.0
+pyparsing==3.2.5
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
 requests==2.31.0
-
-# ABSOLUTELY NO:
-# - pydantic v2 (has Rust dependencies)
-# - newer uvicorn (may have C dependencies)
-# - aiohttp (C compilation)
-# - httptools (C compilation)
-# - pandas (C compilation)
+requests-oauthlib==2.0.0
+rsa==4.9.1
+six==1.16.0
+sniffio==1.3.1
+starlette==0.41.3
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.0.7
+uvicorn==0.24.0
+xlrd==2.0.1
+yarl==1.20.1
