flow for logging in existing user works

--- a/python-backend/.env.example
+++ b/python-backend/.env.example
@@ -5,9 +5,10 @@ PORT=8000
 # Database
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/connectorpro?retryWrites=true&w=majority
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=3600
+# JWT Configuration (Enhanced Security)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-must-be-at-least-32-characters-long
+JWT_ACCESS_TOKEN_EXPIRES=900
+JWT_REFRESH_TOKEN_EXPIRES=604800
 
 # CORS
 CORS_ORIGINS=http://localhost:5173
