--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==3.7.1
 attrs==25.3.0
+bcrypt==4.1.2
 cachetools==5.5.2
 certifi==2023.11.17
 cffi==2.0.0
@@ -11,6 +12,7 @@ charset-normalizer==3.4.3
 click==8.1.7
 cryptography==46.0.1
 dnspython==2.8.0
+email-validator==2.1.1
 et_xmlfile==2.0.0
 fastapi==0.115.6
 frozenlist==1.7.0
@@ -45,6 +47,7 @@ requests==2.31.0
 requests-oauthlib==2.0.0
 rsa==4.9.1
 six==1.16.0
+slowapi==0.1.9
 sniffio==1.3.1
 starlette==0.41.3
 typing_extensions==4.15.0
